Updated JS code for the Guide page dealing with the jump menu to remedy issues #4 and #5.

--- a/css/ucb-guide.css
+++ b/css/ucb-guide.css
@@ -73,7 +73,7 @@ ul.ucb-guide-links-list a {
 }
 
 ul.ucb-guide-jump-list {
-  display: flex;
+  display: none;
   flex-direction: row;
   list-style: none;
   justify-content: center;
